--- a/index.html
+++ b/index.html
@@ -72,6 +72,149 @@
 -->
 			
 			<div class="scrumlog_entry">
+				<h3>2/20/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on ingredient pages</li>
+					<li>Next, add sample recipes</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Did work on tags and search function</li>
+					<li>Next, add sample recipes</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Did preliminary work on recipe creation form</li>
+					<li>Next, add sample recipes</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Did preliminary work on recipe creation form</li>
+					<li>Next, add sample recipes</li>
+				</ul>
+			
+			<div class="scrumlog_entry">
+				<h3>2/19/18</h3>
+				Matthew:
+				<ul>
+					<li>Started preliminary work on ingredient pages</li>
+					<li>Next, continue preliminary work on ingredient pages</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Started preliminary work on ingredient pages</li>
+					<li>Next, work on tags and search function</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Started preliminary work on recipe creation form</li>
+					<li>Next, continue preliminary work on recipe creation form</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Started preliminary work on recipe creation form</li>
+					<li>Next, continue preliminary work on recipe creation form</li>
+				</ul>
+			
+			<div class="scrumlog_entry">
+				<h3>2/16/18</h3>
+				Matthew:
+				<ul>
+					<li>Revised recipe page and made logo</li>
+					<li>Next, research many-to-many and tag systems</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Got register/login working</li>
+					<li>Next, research tag systems</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on frontend UI</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on profile page</li>
+					<li>Next, start preliminary work on recipe creation form</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Got register/login working</li>
+					<li>Next, start preliminary work on recipe creation form</li>
+				</ul>
+			</div>
+		
+			<div class="scrumlog_entry">
+				<h3>2/15/18</h3>
+				Matthew:
+				<ul>
+					<li>Began revising recipe page</li>
+					<li>Next, finish revising recipe page</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Tweaked search function further</li>
+					<li>Next, get register/login working</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on frontend UI</li>
+					<li>Next, work on frontend UI further</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on profile page</li>
+					<li>Next, work on profile page further</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on frontend register/login</li>
+					<li>Next, get register/login working</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/14/18</h3>
+				Matthew:
+				<ul>
+					<li>Began revising recipe page</li>
+					<li>Next, finish revising recipe page</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Tweaked search function further</li>
+					<li>Next, continue improving frontend application</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on frontend UI</li>
+					<li>Next, work on frontend UI further</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on profile page</li>
+					<li>Next, work on profile page further</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on frontend register/login</li>
+					<li>Next, work on register/login further</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
 				<h3>2/13/18</h3>
 				Matthew:
 				<ul>
