Fix unclosed divs.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 					<li>Did preliminary work on recipe creation form</li>
 					<li>Next, add sample recipes</li>
 				</ul>
+			</div>
 			
 			<div class="scrumlog_entry">
 				<h3>2/19/18</h3>
@@ -126,6 +127,7 @@
 					<li>Started preliminary work on recipe creation form</li>
 					<li>Next, continue preliminary work on recipe creation form</li>
 				</ul>
+			</div>
 			
 			<div class="scrumlog_entry">
 				<h3>2/16/18</h3>
