--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				</ul>
 				Micah:
 				<ul>
-					<li>N/A</li>
-					<li>N/A</li>
+					<li>Worked on macros and fix formatting</li>
+					<li>Continue to work on macros, fix padding around site</li>
 				</ul>
 				Ian:
 				<ul>
@@ -114,8 +114,8 @@
 				</ul>
 				Micah:
 				<ul>
-					<li>N/A</li>
-					<li>N/A</li>
+					<li>Worked on Front End UI</li>
+					<li>Fix modular macros, change formatting</li>
 				</ul>
 				Ian:
 				<ul>
@@ -144,7 +144,7 @@
 				Micah:
 				<ul>
 					<li>Worked on frontend UI</li>
-					<li>N/A</li>
+					<li>Continue</li>
 				</ul>
 				Ian:
 				<ul>
@@ -173,7 +173,7 @@
 				Micah:
 				<ul>
 					<li>Worked on frontend UI</li>
-					<li>Next, work on frontend UI further</li>
+					<li>Next, work on CSS classes and universialize</li>
 				</ul>
 				Ian:
 				<ul>
