--- a/index.html
+++ b/index.html
@@ -72,31 +72,7 @@
 -->
             <div class="scrumlog_entry">
                 <h3>3/12/2018</h3>
-                Matthew:
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
-                Ethan:
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
-                Micah:
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
-                Ian:
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
-                Vanessa:
-                <ul>
-                    <li></li>
-                    <li></li>
-                </ul>
+                Presentation day
             </div>
 
 
@@ -110,8 +86,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added review updating, site interface improvements</li>
+                    <li>Next, presentation preparations</li>
                 </ul>
                 Micah:
                 <ul>
@@ -141,8 +117,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Improved some image handling for users and recipes, improved interface for review cards, added review cards to profiles and recipes</li>
+                    <li>Next, more Review work</li>
                 </ul>
                 Micah:
                 <ul>
@@ -172,8 +148,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finalized Recipe editing abilities including ingredients</li>
+                    <li>Next, more Review work</li>
                 </ul>
                 Micah:
                 <ul>
@@ -203,8 +179,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Implement basics of Review objects, add autosuggest box to ingredient fields</li>
+                    <li>Next, more Review work</li>
                 </ul>
                 Micah:
                 <ul>
@@ -234,8 +210,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added some more tags to the ingredients</li>
+                    <li>Next, time to start implementing Reviews</li>
                 </ul>
                 Micah:
                 <ul>
@@ -265,8 +241,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added Follow and Unfollow buttons, removed some old code, improved Recipe listings</li>
+                    <li>Next, probably some Review stuff</li>
                 </ul>
                 Micah:
                 <ul>
@@ -296,8 +272,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Did some work on the following system and cards in the feed</li>
+                    <li>Next, implement frontend for following</li>
                 </ul>
                 Micah:
                 <ul>
@@ -327,8 +303,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Add user feed method and methods to get users' recipes and reviews</li>
+                    <li>Next, add the feed to the frontend</li>
                 </ul>
                 Micah:
                 <ul>
@@ -358,8 +334,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Implemented backend portion for following system</li>
+                    <li>Next, implement features for reading your feed</li>
                 </ul>
                 Micah:
                 <ul>
@@ -389,8 +365,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Fixed some methods for updating your profile</li>
+                    <li>Next, start working on follow system</li>
                 </ul>
                 Micah:
                 <ul>
@@ -420,8 +396,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finalized frontend for recipe publishing</li>
+                    <li>Next, whatever is needed.</li>
                 </ul>
                 Micah:
                 <ul>
@@ -451,8 +427,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Updated Ingredient objects to have Description according to client's request</li>
+                    <li>Next, more frontend feature fixes</li>
                 </ul>
                 Micah:
                 <ul>
@@ -482,8 +458,8 @@
                 </ul>
                 Ethan:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added Recipe Name search and strictsearch, show user's own recipes on homepage, </li>
+                    <li>Next, whatever is needed.</li>
                 </ul>
                 Micah:
                 <ul>
