--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on presentation</li>
+                    <li>Next, finish presentation and get ready to present!</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -127,8 +127,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>N/A</li>
+                    <li>Work on presentation</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -158,8 +158,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on edit page</li>
+                    <li>Next, add recipes / general prep for final sprint</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -189,8 +189,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Add quantitied ingredient form works!!</li>
+                    <li>Work on general issues / bugfixes for 3/9 sprint</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -251,8 +251,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Small bugfixes, still working on form fix</li>
+                    <li>Next, hopefully finish ingredient form</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -282,8 +282,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Changed the way data is recieved from backend for ingredient form</li>
+                    <li>Next, get frontend to read data and set values correctly</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -313,8 +313,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Bugfix ingredient forms</li>
+                    <li>Next, try to get ingredient forms working correctly (doesn't recieve array )</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -344,8 +344,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Created a non-working basis for quantitied ingredient form</li>
+                    <li>Next, keep working on ingredient form</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -375,8 +375,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>N/A</li>
+                    <li>Begin working on quantitied ingredient add form</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -406,8 +406,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>N/A</li>
+                    <li>N/A</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -437,8 +437,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finished adding more recipes, logout</li>
+                    <li>Next, general small bugfixes</li>
                 </ul>
                 Vanessa:
                 <ul>
@@ -468,8 +468,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added some recipes</li>
+                    <li>Add more recipes, work on logout feature</li>
                 </ul>
                 Vanessa:
                 <ul>
