--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added a few more recipes</li>
+                    <li>Next, work on final paper</li>
                 </ul>
             </div>
 
@@ -132,8 +132,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added reviews to sample file</li>
+                    <li>Next, add more recipes</li>
                 </ul>
             </div>
 
@@ -163,8 +163,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Completed image uploading</li>
+                    <li>Next, add sample recipes and reviews</li>
                 </ul>
             </div>
 
@@ -194,8 +194,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finalized forms for updating user</li>
+                    <li>Next, complete image uploading for users and recipes</li>
                 </ul>
             </div>
 
@@ -225,8 +225,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added update password method to user, worked on forms</li>
+                    <li>Next, finalize forms to update user and recipe</li>
                 </ul>
             </div>
 
@@ -256,8 +256,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Resolved error i had on local database</li>
+                    <li>Next, condense Image uplaoding</li>
                 </ul>
             </div>
 
@@ -287,8 +287,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finish user update form and work recipe edit form</li>
+                    <li>Next, finalize images</li>
                 </ul>
             </div>
 
@@ -318,8 +318,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>N/A</li>
+                    <li>N/A</li>
                 </ul>
             </div>
 
@@ -349,8 +349,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on forms for updating users</li>
+                    <li>Next, work on image uplaoding</li>
                 </ul>
             </div>
 
@@ -380,8 +380,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on image uploading</li>
+                    <li>Next, work on form to update user profiles</li>
                 </ul>
             </div>
 
@@ -411,8 +411,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Work on image uplaoding</li>
+                    <li>Next, work on image uploading for recipes and users</li>
                 </ul>
             </div>
 
@@ -442,8 +442,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on recipe creation form</li>
+                    <li>Next, work on image uploading</li>
                 </ul>
             </div>
 
@@ -473,8 +473,8 @@
                 </ul>
                 Vanessa:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Added more recipes</li>
+                    <li>Work on recipe creation form</li>
                 </ul>
             </div>
 
