--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                 </ul>
                 Ian:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Work more on quantitied ingredient forms</li>
+                    <li>Next, please finish quantitied ingredient forms</li>
                 </ul>
                 Vanessa:
                 <ul>
