--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <h3>3/9/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finalized UI changes</li>
+                    <li>Next, work on presentation</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -115,8 +115,8 @@
                 <h3>3/8/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>UI update to sidebar</li>
+                    <li>Next, finalize some smaller UI changes</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -146,8 +146,8 @@
                 <h3>3/7/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Updated UI of several editing/uploading pages</li>
+                    <li>Next, update sidebar UI</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -177,8 +177,8 @@
                 <h3>3/6/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Finished work on review frontend</li>
+                    <li>Next, update UI of some pages</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -208,8 +208,8 @@
                 <h3>3/5/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on review frontend</li>
+                    <li>Next, work further on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -242,8 +242,8 @@
                 <h3>3/2/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on review frontend</li>
+                    <li>Next, work further on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -273,8 +273,8 @@
                 <h3>3/1/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on review frontend</li>
+                    <li>Next, work further on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -304,8 +304,8 @@
                 <h3>2/28/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on review frontend</li>
+                    <li>Next, work further on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -335,8 +335,8 @@
                 <h3>2/27/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on review frontend</li>
+                    <li>Next, work further on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -366,8 +366,8 @@
                 <h3>2/26/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Constructed framework for review backend</li>
+                    <li>Next, do preliminary work on review frontend</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -400,8 +400,8 @@
                 <h3>2/23/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Made some small UI updates</li>
+                    <li>Next, start preliminary work on reviews</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -431,8 +431,8 @@
                 <h3>2/22/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on more sample recipes</li>
+                    <li>Next, work on UI updates</li>
                 </ul>
                 Ethan:
                 <ul>
@@ -462,8 +462,8 @@
                 <h3>2/21/2018</h3>
                 Matthew:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Worked on sample recipes</li>
+                    <li>Next, work on more sample recipes</li>
                 </ul>
                 Ethan:
                 <ul>
