--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>create 404 and 500 error pages</li>
+                    <li>make sure they are directing properly</li>
                 </ul>
                 Ian:
                 <ul>
@@ -125,8 +125,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>footer fixed, more css changed</li>
+                    <li>create error pages</li>
                 </ul>
                 Ian:
                 <ul>
@@ -156,8 +156,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>colors and fonts, general css</li>
+                    <li>fix footer</li>
                 </ul>
                 Ian:
                 <ul>
@@ -187,8 +187,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Profile Page</li>
+                    <li>edit some of the colors and fonts around the site</li>
                 </ul>
                 Ian:
                 <ul>
@@ -218,8 +218,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Profile page</li>
+                    <li>More on the Profile Page</li>
                 </ul>
                 Ian:
                 <ul>
@@ -252,8 +252,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>formatted search bar</li>
+                    <li>add to the profile page</li>
                 </ul>
                 Ian:
                 <ul>
@@ -283,8 +283,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>reverted homepage but kept some of the new features</li>
+                    <li>format searchbar</li>
                 </ul>
                 Ian:
                 <ul>
@@ -314,8 +314,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>making new homepage</li>
+                    <li>work on homepage</li>
                 </ul>
                 Ian:
                 <ul>
@@ -345,8 +345,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>fixed most css</li>
+                    <li>make a new homepage</li>
                 </ul>
                 Ian:
                 <ul>
@@ -376,8 +376,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>fixed macros to new formatting</li>
+                    <li>finish fixing common css</li>
                 </ul>
                 Ian:
                 <ul>
@@ -410,8 +410,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>alter layout and change formatting</li>
+                    <li>alter layout and change formatting</li>
                 </ul>
                 Ian:
                 <ul>
@@ -441,8 +441,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>alter layout and change formatting</li>
+                    <li>alter layout and change formatting</li>
                 </ul>
                 Ian:
                 <ul>
@@ -472,8 +472,8 @@
                 </ul>
                 Micah:
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li>alter layout</li>
+                    <li>format rest of site</li>
                 </ul>
                 Ian:
                 <ul>
